# windows-kernel-rs

./: .gitignore  LICENSE  README.md
02-hello-world/: Cargo.toml
02-hello-world/src/: lib.rs
03-generating-bindings/: Cargo.toml  Makefile.toml  build.rs
03-generating-bindings/src/: lib.rs
04-safe-framework/: Cargo.toml
04-safe-printing/src/: lib.rs
05-creating-devices/: Cargo.toml
05-creating-devices/.cargo/: config
05-creating-devices/src/: lib.rs
06-reading-and-writing/: Cargo.toml  Makefile.toml
06-reading-and-writing/src/: lib.rs
07-io-controls/: Cargo.toml
07-io-controls/src/: lib.rs
user/05-creating-devices/: Cargo.toml
user/05-creating-devices/src/: main.rs
user/06-reading-and-writing/: Cargo.toml
user/06-reading-and-writing/src/: main.rs
user/07-io-controls/: Cargo.toml
user/07-io-controls/src/: main.rs
windows-kernel-build/: Cargo.toml
windows-kernel-build/src/: lib.rs
windows-kernel-rs/: Cargo.toml
windows-kernel-rs/src/: affinity.rs  alloc.rs  allocator.rs  device.rs  driver.rs  error.rs  fast_mutex.rs  intrin.rs  io.rs  ioctl.rs  lib.rs  mdl.rs  memory.rs  process.rs  push_lock.rs  request.rs  section.rs  string.rs  symbolic_link.rs  user_ptr.rs  version.rs
windows-kernel-rs/src/sync/: mod.rs  push_lock.rs
windows-kernel-sys/: Cargo.toml  build.rs
windows-kernel-sys/src/: base.rs  intrin.rs  lib.rs  netio.rs  ntoskrnl.rs  wrapper.c  wrapper.h  wrapper_intrin.c  wrapper_netio.h
winioctl/: Cargo.toml
winioctl/src/: error.rs  ioctl.rs  lib.rs
