[package]
name = "04-safe-framework"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
windows-kernel-build = { path = "../windows-kernel-build" }

[dependencies]
windows-kernel-rs = { path = "../windows-kernel-rs" }
windows-kernel-sys = { path = "../windows-kernel-sys" }
