[package]
name = "windows-kernel-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[features]
default = ["alloc"]
alloc = []
system = []

[dependencies]
bitflags = "1.3"
cty = "0.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
widestring = { version = "0.4", default-features = false, features = ["alloc"]}
windows-kernel-sys = { path = "../windows-kernel-sys" }
