[package]
name = "windows-kernel-sys"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["intrin", "ntoskrnl", "netio"]
intrin = []
ntoskrnl = []
netio = []

[dependencies]
cty = "0.2"

[build-dependencies]
bindgen = "0.59"
cc = "1.0"
thiserror = "1.0"
winreg = "0.10"
