[package]
name = "winioctl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
thiserror = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["ioapiset", "winioctl"] }
